tags/v1.0/docs/5.0._Upgrade_Path.md
# Upgrade Path

[←Behaviour - RTP Transport Type ](4.1._Behaviour_-_RTP_Transport_Type.md) · [ Index↑ ](..)

_(c) AMWA 2017, CC Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)_

As is common with web APIs, over time changes will be made to support new use cases and deprecate old ways of working. The NMOS APIs are no different, and have been designed to permit in-service upgrades across a facility which may be running large amounts of equipment with support for different versions of these specifications.

API versioning is specified in the [APIs](2.0._APIs.md) documentation, with procedures for handling upgrades described below.

## Requirements for Connection Management APIs

Implementers of the Connection Management API must support at least one API version, and may support more than one at a time.

## Requirements for Connection Management clients

Implementers of Connection Management clients are strongly recommended to support multiple versions of the Connection Management API simultaneously in order to ease the upgrade process in live facilities.

## Performing Upgrades

The following procedure is suggested for a live system which needs to migrate between API versions.

* Upgrade API clients to their new versions, which must support all Connection Management API versions you are currently using in your deployment.
* Upgrade Connection Management API implementations to support the new API version.

[←Behaviour - RTP Transport Type ](4.1._Behaviour_-_RTP_Transport_Type.md) · [ Index↑ ](..)
